--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Shadow is a simple yet stunning service built to access any website">
-<meta name="author" content="Fog Network">
+<meta name="description" content="We stay in the shadows while others stay in the light">
+<meta name="author" content="A">
 <meta property="og:image" content="/img/logo.png">
 
 <script src="/js/index.js"></script>
